--- a/LoanManagementSystem/Views/User/Index.cshtml
+++ b/LoanManagementSystem/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LoanManagementSystem.Models.User>
+﻿@model IEnumerable<LoanManagementSystem.Models.sdtoUser>
 
 @{
     ViewBag.Title = "Index";
