--- a/LoanManagementSystem/Views/UserGroup/Delete.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoanManagementSystem.Models.UserGroup
+﻿@model LoanManagementSystem.Models.sdtoUserGroup
 
 @{
     ViewBag.Title = "Delete";
