Column Name change issue with 'Groupid'

--- a/LoanManagementSystem/Views/User/Create.cshtml
+++ b/LoanManagementSystem/Views/User/Create.cshtml
@@ -41,10 +41,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UserGroupID, "UserGroupID", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserGroupId, "UserGroupId", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserGroupID", String.Empty)
-                @Html.ValidationMessageFor(model => model.UserGroupID)
+                @Html.DropDownList("UserGroupId", String.Empty)
+                @Html.ValidationMessageFor(model => model.UserGroupId)
             </div>
         </div>
 
