--- a/LoanManagementSystem/Views/ScheduleSettings/Edit.cshtml
+++ b/LoanManagementSystem/Views/ScheduleSettings/Edit.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ParentId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ParentId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(x => x.ParentId, (SelectList)ViewBag.ScheduleList)
                 @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
             </div>
         </div>
