--- a/LoanManagementSystem/Views/AccountTypes/Details.cshtml
+++ b/LoanManagementSystem/Views/AccountTypes/Details.cshtml
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.sdtoAccountTypeId }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.AccountTypeId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
