--- a/LoanManagementSystem/Views/AccountTypes/Index.cshtml
+++ b/LoanManagementSystem/Views/AccountTypes/Index.cshtml
@@ -30,9 +30,9 @@
             @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.sdtoAccountTypeId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.sdtoAccountTypeId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.sdtoAccountTypeId })
+            @Html.ActionLink("Edit", "Edit", new { id=item.AccountTypeId }) |
+            @Html.ActionLink("Details", "Details", new { id=item.AccountTypeId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.AccountTypeId })
         </td>
     </tr>
 }
