--- a/LoanManagementSystem/Views/AccountHeads/Delete.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Delete.cshtml
@@ -29,19 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ContactPerson.Code)
+            @Html.DisplayNameFor(model => model.Contacts.ContactName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ContactPerson.Code)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Contacts.Telephone1)
+            @Html.DisplayFor(model => model.Contacts.ContactName)
         </dd>
 
         <dt>
