--- a/LoanManagementSystem/Views/AccountHeads/Index.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Index.cshtml
@@ -19,10 +19,7 @@
             @Html.DisplayNameFor(model => model.Address.Address1)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContactPerson.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
+            @Html.DisplayNameFor(model => model.Contacts.ContactName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.AccountCode)
@@ -69,10 +66,7 @@
             @Html.DisplayFor(modelItem => item.Address.Address1)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ContactPerson.Code)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Contacts.Telephone1)
+            @Html.DisplayFor(modelItem => item.Contacts.ContactName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AccountCode)
