--- a/LoanManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LoanManagementSystem/Views/Shared/_Layout.cshtml
@@ -210,6 +210,7 @@
                 </form>
                 <!-- /.search form -->
                 <!-- Sidebar Menu -->
+                @Html.Partial("MenuView", ((Data.Models.SysBase.Tree.Tree<Data.Models.Accounts.sdtoUrlInfo>)ViewBag.Menu).Nodes.FirstOrDefault())
                 <ul class="sidebar-menu">
                     <li class="header">HEADER</li>
                     <!-- Optionally, you can add icons to the links -->
