--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Edit Member</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoUser</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.UserID)
