--- a/LoanManagementSystem/Views/Executive/Details.cshtml
+++ b/LoanManagementSystem/Views/Executive/Details.cshtml
@@ -5,36 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Executive Details</h2>
 
-<div>
-    <h4>sdtoUser</h4>
+<div> 
 	<hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Address.Address1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address.Address1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Contacts.ContactName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Contacts.ContactName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserGroup.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserGroup.Name)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Code)
         </dt>
@@ -42,7 +17,6 @@
         <dd>
             @Html.DisplayFor(model => model.Code)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -50,23 +24,6 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Designation)
         </dt>
@@ -76,12 +33,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserType)
+            @Html.DisplayNameFor(model => model.Address.Address1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserType)
+            @Html.DisplayFor(model => model.Address.Address1)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Contacts.Telephone1)
+        </dd>
+
+       
+         
+        
+
+        
+ 
 
     </dl>
 </div>
