--- a/LoanManagementSystem/Views/Executive/Details.cshtml
+++ b/LoanManagementSystem/Views/Executive/Details.cshtml
@@ -33,7 +33,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Address1)
+            @*@Html.DisplayNameFor(model => model.Address.Address1)*@
+            <label>Address</label>
         </dt>
 
         <dd>
@@ -41,7 +42,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
+            @*@Html.DisplayNameFor(model => model.Contacts.Telephone1)*@ 
+            <label>Contact No</label>
         </dt>
 
         <dd>
