--- a/LoanManagementSystem/Views/User/Create.cshtml
+++ b/LoanManagementSystem/Views/User/Create.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create User</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>User</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true)
 
