--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -51,39 +51,39 @@
         <h4>Communication Address</h4>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.Address1, "Address1", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.Address1, "Address1", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Address1)
-                @Html.ValidationMessageFor(model => model.Address.Address1)
+                @Html.EditorFor(model => model.UserAddress.Address1)
+                @Html.ValidationMessageFor(model => model.UserAddress.Address1)
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.Address2, "Address2", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.Address2, "Address2", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Address2)
-                @Html.ValidationMessageFor(model => model.Address.Address2)
+                @Html.EditorFor(model => model.UserAddress.Address2)
+                @Html.ValidationMessageFor(model => model.UserAddress.Address2)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.Place, "Place", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.Place, "Place", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Place)
-                @Html.ValidationMessageFor(model => model.Address.Place)
+                @Html.EditorFor(model => model.UserAddress.Place)
+                @Html.ValidationMessageFor(model => model.UserAddress.Place)
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.Post, "PO", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.Post, "PO", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Post)
-                @Html.ValidationMessageFor(model => model.Address.Post)
+                @Html.EditorFor(model => model.UserAddress.Post)
+                @Html.ValidationMessageFor(model => model.UserAddress.Post)
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.District, "District", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.District, "District", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.District)
-                @Html.ValidationMessageFor(model => model.Address.District)
+                @Html.EditorFor(model => model.UserAddress.District)
+                @Html.ValidationMessageFor(model => model.UserAddress.District)
             </div>
         </div>
         <div class="form-group">
