--- a/LoanManagementSystem/Views/Executive/Edit.cshtml
+++ b/LoanManagementSystem/Views/Executive/Edit.cshtml
@@ -57,9 +57,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Address.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserAddress.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Address1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.UserAddress.Address1, new { htmlAttributes = new { @class = "form-control" } })
 
             </div>
         </div>
