--- a/LoanManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LoanManagementSystem/Views/Shared/_Layout.cshtml
@@ -212,10 +212,10 @@
                 <!-- Sidebar Menu -->
                 
                 <ul class="sidebar-menu">
-                    <li class="header">HEADER</li>
+                    @*<li class="header">Menu</li>*@
                     <!-- Optionally, you can add icons to the links -->
                     @Html.Partial("MenuView", ((Data.Models.SysBase.Tree.Tree<Data.Models.Accounts.sdtoUrlInfo>)ViewBag.Menu).Nodes.FirstOrDefault())
-                    <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
+                    @*<li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
                     <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
                     <li class="treeview">
                         <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
@@ -223,7 +223,7 @@
                             <li><a href="#">Link in level 2</a></li>
                             <li><a href="#">Link in level 2</a></li>
                         </ul>
-                    </li>
+                    </li>*@
                 </ul><!-- /.sidebar-menu -->
             </section>
             <!-- /.sidebar -->
