Helper Utility Added

--- a/LoanManagementSystem/Views/Company/Details.cshtml
+++ b/LoanManagementSystem/Views/Company/Details.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CompanyName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.CompanyName)
         </dd>
 
         <dt>
