--- a/LoanManagementSystem/Views/Company/Index.cshtml
+++ b/LoanManagementSystem/Views/Company/Index.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayNameFor(model => model.Code)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CompanyName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Owner)
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.Code)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.CompanyName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Owner)
