--- a/LoanManagementSystem/Views/Company/Delete.cshtml
+++ b/LoanManagementSystem/Views/Company/Delete.cshtml
@@ -37,11 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CompanyName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.CompanyName)
         </dd>
 
         <dt>
