edit save - hidden fields added

--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -55,6 +55,8 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserAddress.Address1)
                 @Html.ValidationMessageFor(model => model.UserAddress.Address1)
+                @Html.HiddenFor(model => model.UserAddressId)
+                @Html.HiddenFor(model => model.UserAddress.AddressId)
             </div>
         </div>
         <div class="form-group">
@@ -98,6 +100,8 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Contacts.Telephone1)
                 @Html.ValidationMessageFor(model => model.Contacts.Telephone1)
+                @Html.HiddenFor(model => model.UserContactId)
+                @Html.HiddenFor(model => model.Contacts.ContactId)
             </div>
         </div>
 
@@ -108,6 +112,9 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PermanentAddress.Address1)
                 @Html.ValidationMessageFor(model => model.PermanentAddress.Address1)
+                @Html.HiddenFor(model => model.PermanentAddressId)
+                @Html.HiddenFor(model => model.PermanentAddress.AddressId)
+                @Html.HiddenFor(model => model.UserType) 
             </div>
         </div>
         <div class="form-group">
@@ -145,6 +152,8 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PermanentContacts.Telephone1)
                 @Html.ValidationMessageFor(model => model.PermanentContacts.Telephone1)
+                @Html.HiddenFor(model => model.PermanentContactId)
+                @Html.HiddenFor(model => model.PermanentContacts.ContactId)
             </div>
         </div>
 
@@ -162,6 +171,8 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GuaranterAddress.Address1)
                 @Html.ValidationMessageFor(model => model.GuaranterAddress.Address1)
+                @Html.HiddenFor(model => model.GuaranterAddressId)
+                @Html.HiddenFor(model => model.GuaranterAddress.AddressId)
             </div>
         </div>
         <div class="form-group">
@@ -169,6 +180,8 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GuaranterContacts.Telephone1)
                 @Html.ValidationMessageFor(model => model.GuaranterContacts.Telephone1)
+                @Html.HiddenFor(model => model.GuaranterContactId)
+                @Html.HiddenFor(model => model.GuaranterContacts.ContactId)
             </div>
         </div>
 
